# FoolGuys

./: README.md  collision.glb  docker-compose.yml  dockercompose.yml  old_docker.yml  package-lock.json  package.json
.github/workflows/: rust.yml  webpack.yml
Blender/: character.glb  client.glb  collision.glb  new_world.blend  new_world.blend1  primatives.blend  primatives.blend1
Blender/Assets/: Assets.blend  Assets.blend1  primatives.blend  primatives.blend1  test.blend  test.blend1  test.glb
addon/: __init__.py  main.py  readme.md  test.glb
client/: Dockerfile  README.md  package.json
douvk_engine/: Cargo.toml
douvk_engine/src/: asset.rs  asset_manager.rs
server/: Cargo.toml  dockerfile  index.html  readme.md
server/bindings/: CharacterState.ts  JumpIdleState.ts  MessageType.ts  NavMeshTiles.ts  PhysicsState.ts  PlayerUpdate.ts  Quat.ts  Translation.ts  Vec3.ts  VehicleUpdate.ts  index.ts
server/src/: animation.rs  character.rs  client.rs  dynamic.rs  main.rs  physics.rs  player.rs  structs.rs  world.rs
server/src/character_states/: character_base.rs  falling.rs  idle.rs  jumpidle.rs  walk.rs
server/src/nav_mesh/: nav_mesh.rs
server/src/physics_objects/: asset.rs  collision.rs  dynamic.rs  launchpad.rs  pivot.rs  ragdoll.rs  rigid_body_parent.rs  spin.rs
server/src/vehicles/: blimp.rs  vehicles.rs
src/blender/: test.blend1  world.blend  world.blend1
src/client/: client.ts  tsconfig.json
src/server/: game.ts  physics.ts  player.ts  server.ts
test_rust/: Cargo.toml  dockerfile  index.html
test_rust/src/: main.rs
(+77 files in other folders)
