[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
serde_json = "1.0"
serde = {version = "1.0.150", features = ["derive"]}
nalgebra = "0.31.4"
rapier3d = "0.16.1"
rand = "0.8.5"
#gltf = "1.0.0"

[dependencies.gltf]
version = "1.0"
features = ["extras", "names"]