[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0.150", features = ["derive"]}
nalgebra = "0.31.4"
rapier3d = {version = "0.16.1", features = [ "serde-serialize" ] }
#rapier3d = { path = "../../rapier/crates/rapier3d" }
ts-rs = "6.2"

rand = "0.8.5"
#gltf = "1.0.0"
tokio-tungstenite = "*"
tokio = { version = "1.23.0", features = ["full"] }
futures-util = "0.3.25"
futures-channel = "0.3.25"

[dependencies.gltf]
version = "1.0"
features = ["extras", "names","utils"]

